--- a/package.json
+++ b/package.json
@@ -1,6 +1,31 @@
 {
   "name": "mysiedler",
   "version": "1.0.0",
+  "description": "Mein nächster Versuch, \"Die Siedler 2\" nachzuprogrammieren.",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js",
+    "live": "live-server public",
+    "dev-live": "concurrently \"npm run dev\" \"npm run live\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Dudy/mysiedler.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Dudy/mysiedler/issues"
+  },
+  "homepage": "https://github.com/Dudy/mysiedler#readme",
   "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.2",
+    "nodemon": "^3.0.1",
+    "concurrently": "^6.2.2"
   }
 }
